# agriculture-backend

./: .gitignore  Dockerfile-celery-worker  Dockerfile-django  README.md  docker-compose.yml  nginx.conf  pyproject.toml
agriculture-frontend/: package-lock.json  package.json
agriculture-frontend/src/: App.tsx
agriculture-frontend/src/pages/Dashboard/: Dashboard.tsx
agriculture-frontend/src/pages/ImageSetPage/: ImageSetPage.css  ImageSetPage.tsx
agriculture-frontend/src/pages/ImageSetsPage/: ImageSetsPage.css  ImageSetsPage.tsx
agriculture-frontend/src/pages/LoginPage/: LoginPage.css  LoginPage.tsx
agriculture-frontend/src/services/: apiService.ts
agriculture-frontend/src/utils/: tokenService.ts
api/: models.py  serializers.py  urls.py  views.py
api/data_classes/: image_file.py
api/imagesets/: models.py  serializers.py  urls.py  views.py
api/imagesets/services/: images_storage_service.py
api/migrations/: 0001_initial.py  0002_imageset_ml_processing_result_alter_imageset_status.py
config/: celery.py  celeryconfig.py  settings.py  urls.py  wsgi.py
